[package]
name = "hey-listen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
config = "0.11.0"
log = "0.4.14"
tracing = "0.1.28"
tracing-subscriber = "0.2.24"

[dependencies.tokio]
version = "1.12.0"
features = ["macros", "rt-multi-thread"]

[dependencies.serenity]
version = "0.10.9"
features = ["framework", "standard_framework", "rustls_backend"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

